* The smells masked by *.reek config files can now be seen:
** The header for each source file now counts masked smells
** The --show-all (-a) option shows masked warnings in the report
* The spec matchers are now accessed by requiring 'reek/adapters/spec'

=== Minor Changes
* Reek's RDoc is now hosted at http://rdoc.info/projects/kevinrutherford/reek
* If a dir is passed on the command-line all **/*.rb files are examined below it
* Several changes to the LongMethod counting algorithm:
** LongMethod now counts statements deeper into each method (fixed #25)
** LongMethod no longer counts control structures, only their contained stmts
** See http://wiki.github.com/kevinrutherford/reek/long-method for details
* LargeClass is disabled when checking in-memory classes (fixed #28)
* UtilityFunction no longer reports methods that call 'super' (fixed #39)
* Now reports an error for corrupt config files
* Empty config files are ignored

== 1.1.3 2009-05-19

=== Minor Changes
* No longer depends directly on the sexp_processor gem

=== Fixes
* LargeClass now relies only on the given source code (fixed #26)

== 1.1.2 2009-05-18

=== Major Enhancements
* Switched from ParseTree to ruby_parser for source code parsing
* 'MyClass.should_not reek' now only possible if ParseTree gem installed

== 1.1.1 2009-05-08

=== Minor enhancements
* LargeClass now also warns about any class with > 9 instance variables (fixed #6)
* Now depends on ruby2ruby, to display code better
* Duplication notices more repeated method calls
* Smells within blocks are now reported better

== 1.1.0 2009-04-10

=== Minor enhancements
* Now possible to write 'MyClass.should_not reek' (fixed #33)

=== Fixes
* Now counts attr assignments ([]= etc) in feature envy calculations
* Doesn't attempt to find *.reek files when reading code from stdin

== 1.0.1 2009-04-06

=== Fixes
* Dir[...].to_source now creates a Report that can be browsed (fixed #36)

== 1.0.0 2009-04-05

=== Major enhancements