@@ -11,15 +11,15 @@ Feature: Correctly formatted reports
       """
       spec/samples/two_smelly_files/dirty_one.rb -- 6 warnings:
         Dirty has the variable name '@s' (Uncommunicative Name)
-        Dirty#a calls @s.title multiple times (Duplication)
-        Dirty#a calls puts(@s.title) multiple times (Duplication)
+        Dirty#a calls @s.title twice (Duplication)
+        Dirty#a calls puts(@s.title) twice (Duplication)
         Dirty#a has the name 'a' (Uncommunicative Name)
         Dirty#a/block has the variable name 'x' (Uncommunicative Name)
         Dirty#a/block/block is nested (Nested Iterators)
       spec/samples/two_smelly_files/dirty_two.rb -- 6 warnings:
         Dirty has the variable name '@s' (Uncommunicative Name)
-        Dirty#a calls @s.title multiple times (Duplication)
-        Dirty#a calls puts(@s.title) multiple times (Duplication)
+        Dirty#a calls @s.title twice (Duplication)
+        Dirty#a calls puts(@s.title) twice (Duplication)
         Dirty#a has the name 'a' (Uncommunicative Name)
         Dirty#a/block has the variable name 'x' (Uncommunicative Name)
         Dirty#a/block/block is nested (Nested Iterators)
@@ -69,15 +69,15 @@ Feature: Correctly formatted reports
       """
       spec/samples/clean_due_to_masking/dirty_one.rb -- 0 warnings (+6 masked):
         (masked) Dirty has the variable name '@s' (Uncommunicative Name)
-        (masked) Dirty#a calls @s.title multiple times (Duplication)
-        (masked) Dirty#a calls puts(@s.title) multiple times (Duplication)
+        (masked) Dirty#a calls @s.title twice (Duplication)
+        (masked) Dirty#a calls puts(@s.title) twice (Duplication)
         (masked) Dirty#a has the name 'a' (Uncommunicative Name)
         (masked) Dirty#a/block has the variable name 'x' (Uncommunicative Name)
         (masked) Dirty#a/block/block is nested (Nested Iterators)
       spec/samples/clean_due_to_masking/dirty_two.rb -- 0 warnings (+6 masked):
         (masked) Dirty has the variable name '@s' (Uncommunicative Name)
-        (masked) Dirty#a calls @s.title multiple times (Duplication)
-        (masked) Dirty#a calls puts(@s.title) multiple times (Duplication)
+        (masked) Dirty#a calls @s.title twice (Duplication)
+        (masked) Dirty#a calls puts(@s.title) twice (Duplication)
         (masked) Dirty#a has the name 'a' (Uncommunicative Name)
         (masked) Dirty#a/block has the variable name 'x' (Uncommunicative Name)
         (masked) Dirty#a/block/block is nested (Nested Iterators)
