@@ -14,13 +14,14 @@
 
 === Minor Changes
 * Reek's RDoc is now hosted at http://rdoc.info/projects/kevinrutherford/reek
-* If a dir is passed on the command-line all **/*.rb files are examined below it
+* If a dir is passed on the command-line all **/*.rb files below it are examined
 * Several changes to the LongMethod counting algorithm:
 ** LongMethod now counts statements deeper into each method (fixed #25)
 ** LongMethod no longer counts control structures, only their contained stmts
 ** See http://wiki.github.com/kevinrutherford/reek/long-method for details
 * LargeClass is disabled when checking in-memory classes (fixed #28)
 * UtilityFunction no longer reports methods that call 'super' (fixed #39)
+* Duplication warnings now report the number of identical calls
 * Now reports an error for corrupt config files
 * Empty config files are ignored
 
